<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menuItemHome"
        android:enabled="true"
        android:title="@string/menuItemHome"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/menuItemRoom"
        android:enabled="true"
        android:title="@string/menuItemRoom"
        android:icon="@drawable/ic_room" />

    <item
        android:id="@+id/menuItemNotifications"
        android:enabled="true"
        android:title="@string/menuItemNotifications"
        android:icon="@drawable/ic_notifications" />

    <item
        android:id="@+id/menuItemSetting"
        android:enabled="true"
        android:title="@string/menuItemSettings"
        android:icon="@drawable/ic_settings" />
</menu>