<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.activity.SignupActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Title -->
        <TextView
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:text="@string/textViewSignup"
            android:textSize="50sp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp" />

        <!-- Username -->
        <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/TextInputEditText.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:boxBackgroundColor="@color/background"
            app:hintTextColor="@color/secondaryColor"
            app:boxStrokeColor="@color/secondaryColor"
            android:layout_marginTop="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUsername"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/editTextUsername"
                android:textSize="15sp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewUsernameMessage"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:textColor="@color/error"
            android:textStyle="bold"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="5dp" />

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/TextInputEditText.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:passwordToggleEnabled="true"
            app:boxBackgroundColor="@color/background"
            app:hintTextColor="@color/secondaryColor"
            app:boxStrokeColor="@color/secondaryColor" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/editTextPassword"
                android:textSize="15sp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewPasswordMessage"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:textColor="@color/error"
            android:textStyle="bold"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="5dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:layout_gravity="center">

            <!-- Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:theme="@style/TextInputEditText.Outlined"
                android:id="@+id/textInputLayoutName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                app:boxBackgroundColor="@color/background"
                app:hintTextColor="@color/secondaryColor"
                app:boxStrokeColor="@color/secondaryColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/editTextName"
                    android:inputType="textPersonName"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewNameMessage"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:textColor="@color/error"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName" />

            <!-- Surname -->
            <com.google.android.material.textfield.TextInputLayout
                android:theme="@style/TextInputEditText.Outlined"
                android:id="@+id/textInputLayoutSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                app:boxBackgroundColor="@color/background"
                app:hintTextColor="@color/secondaryColor"
                app:boxStrokeColor="@color/secondaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSurname"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/editTextSurname"
                    android:inputType="textPersonName"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewSurnameMessage"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:textColor="@color/error"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSurname" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/TextInputEditText.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:boxBackgroundColor="@color/background"
            app:hintTextColor="@color/secondaryColor"
            app:boxStrokeColor="@color/secondaryColor" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/editTextEmail"
                android:textSize="15sp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewEmailMessage"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:textColor="@color/error"
            android:textStyle="bold"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="5dp" />

        <!-- Timezone -->
        <Spinner
            android:id="@+id/spinnerTimezone"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:entries="@array/spinnerTimezone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonContinue"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/shape_button"
            android:textColor="@color/secondaryTextColor"
            android:textSize="12sp"
            android:text="@string/buttonContinue"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="100dp" />
    </LinearLayout>
</ScrollView>


